--- a/style.css
+++ b/style.css
@@ -244,8 +244,8 @@ header{
 .text-zone h1::before{
     content: '<h1>';
     position: absolute;
-    top: 130px;
-    left: 12.7rem;
+    top: 150px;
+    left: 0;
     font-size: 1.2rem;
     font-family: 'La Belle Aurore', cursive;
     color: #666565;
@@ -255,8 +255,8 @@ header{
 .text-zone h1::after{
     content: '</h1>';
     position: absolute;
-    bottom: 200px;
-    right: 33.7rem;
+    bottom: 310px;
+    right: 9.0rem;
     font-size: 1.2rem;
     font-family: 'La Belle Aurore', cursive;
     color: #666565;
@@ -431,6 +431,97 @@ header{
 }
 
 
+/* work section */
+
+#work-section{
+    padding: 5rem 0 5rem 1rem;
+    position: relative;
+}
+
+#header{
+    font-size: 2rem;
+    margin-bottom: 30px;
+}
+
+.light{
+    color:rgb(0,238,255);
+    position: relative;
+    font-weight: bold;
+}
+
+.light::before{
+    position: absolute;
+    content: attr(data-text);
+    text-shadow: 0px 0px 20px rgb(0,238,255);
+    filter: blur(10px) brightness(0);
+    animation: flickers 2s linear forwards;
+    animation-delay: 1s;
+}
+
+@keyframes flickers {
+    0%{
+        filter: blur(5px) brightness(1);
+    }
+
+    3%{
+        filter: blur(5px) brightness(0);
+    }
+
+    6%{
+        filter: blur(5px) brightness(0);
+    }
+
+    7%{
+        filter: blur(5px) brightness(1);
+    }
+
+    8%{
+        filter: blur(5px) brightness(0);
+    }
+
+    9%{
+        filter: blur(5px) brightness(1);
+    }
+
+    10%{
+        filter: blur(5px) brightness(0);
+    }
+
+    20%{
+        filter: blur(5px) brightness(1);
+    }
+
+    50%{
+        filter: blur(5px) brightness(1);
+    }
+
+    99%{
+        filter: blur(5px) brightness(0);
+    }
+
+    100%{
+        filter: blur(5px) brightness(1);
+    }
+}
+
+.text-zone-2 p{
+    line-height: 1.5;
+}
+
+.fake-big-work{
+    font-size: 12rem;
+    font-weight: 700;
+    position: absolute;
+    color: #2d2d2e;
+    left: 10px;
+    bottom: -70px;
+    letter-spacing: -10px;
+    z-index: -999;
+}
+
+
+
+
 @media (min-width: 768px){
     header{
         justify-content: flex-end;
@@ -486,6 +577,17 @@ header{
         letter-spacing: -6px;
     }
 
+    .text-zone h1::before{
+        content: '<h1>';
+        top: 130px;
+        left: 12.7rem;
+    }
+    
+    .text-zone h1::after{
+        content: '</h1>';
+        bottom: 200px;
+        right: 33.7rem;  
+    }
     .text-logo-img{
         width: 5rem;
         height: 8rem;
@@ -508,6 +610,10 @@ header{
         left: 10.25rem;
         right: auto;
     }
+
+    /* work section */
+
+    
 
 
 
